--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,23 +1,25 @@
-@charset "UTF-8";
-@import "./base.css";
-@import "./loading.scss";
+/**
+ * Main Page
+ */
 .main {
+  display: flex;
   width: 100%;
   height: 100%;
   background-color: #282B56;
-  display: flex;
   justify-content: center;
   align-items: center;
+
   .info {
     text-align: center;
+
     .name {
-      margin: 0 auto 30px;
       width: 200px;
       height: 200px;
-      line-height: 200px;
+      margin: 0 auto 30px;
       background-color: #FFF;
       border-radius: 100%;
       font-size: 60px;
+      line-height: 200px;
       text-transform: uppercase;
     }
   }
